modified to allow two splash animations

--- a/public_html/assets/css/splash.css
+++ b/public_html/assets/css/splash.css
@@ -17,7 +17,7 @@
 .splash-animate {
     -webkit-animation: splash-opacity 5s forwards;
             animation: splash-opacity 5s forwards;
-
+    /* this delay allows splash-img-blur to finish first */
     -webkit-animation-delay: 3.5s;
             animation-delay: 3.5s;
 }
