added a border to images in gallery and lightbox

--- a/public_html/assets/css/nobs-lightbox.css
+++ b/public_html/assets/css/nobs-lightbox.css
@@ -68,6 +68,11 @@
 .lb-img {
     width: 80%;
     height: 80%;
+
+    padding: 0.25rem;
+/* palette */
+    background-color: #fff;
+    border-radius: 0.25rem;
 }
 
 @media (min-width: 768px) {
