--- a/public_html/assets/css/nobs-gallery.css
+++ b/public_html/assets/css/nobs-gallery.css
@@ -35,17 +35,14 @@
 }
 
 .gallery-img {
-    border: 2px solid black;
     max-width: 100%;
-}
+    height: auto;
 
-/*
-@media (min-width: 768px) {
-    .gallery-img {
-        max-width: 100%;
-    }
+    padding: 0.25rem;
+/* palette */
+    background-color: black;
+    border-radius: 0.25rem;
 }
-*/
 
 /* centered */
 .text-overimg {
