by default a text area will use a monospace font, this change fixes that

--- a/public_html/assets/css/reseter.css
+++ b/public_html/assets/css/reseter.css
@@ -131,6 +131,9 @@ select {
 textarea {
     overflow: auto;
     vertical-align: top;
+    /* jxmot
+    by default a text area will use a monospace font */
+    font-family: inherit;
 }
 
 [type="search"] {
