--- a/public_html/assets/css/nobs.css
+++ b/public_html/assets/css/nobs.css
@@ -52,6 +52,10 @@ body {
     margin-left: 10px;
 }
 
+.nav-logo:hover {
+    color: var(--nav-logo-text-hover);
+}
+
 @media (min-width: 768px) {
     .nav-logo {
         font-size: 60px;
