--- a/public_html/assets/css/nobs-gallery.css
+++ b/public_html/assets/css/nobs-gallery.css
@@ -6,13 +6,12 @@
 .gallery-grid {
     display: grid;
 
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
 
-    -moz-column-gap: 0.5em;
-
-         column-gap: 0.5em;
-    row-gap: 1em;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+    row-gap: 1rem;
 
     grid-auto-flow: row;
     justify-items: center;
@@ -20,6 +19,8 @@
 
     padding-top: 1rem;
     padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 @media (min-width: 768px) {
