--- a/public_html/assets/css/nobs-gallery.css
+++ b/public_html/assets/css/nobs-gallery.css
@@ -40,8 +40,7 @@
     height: auto;
 
     padding: 0.25rem;
-/* palette */
-    background-color: black;
+    background-color: var(--gallery-img-bg-color);
     border-radius: 0.25rem;
 }
 
@@ -54,12 +53,12 @@
 
     text-align: center;
     font-weight: 900;
-    color: red;
-    background-color: black;
+    color: var(--bright-red);
+    background-color: var(--black);
 }
 
 @media (min-width: 768px) {
     .text-overimg {
-        color: yellow;
+        color: var(--bright-yellow);
     }
 }
